# roamex

./: .gitignore  .tmuxp.yaml  readme.org
backend/: pyproject.toml  rest.org
backend/src/: api.py  cli.py  database.py  dbops.py  fileops.py  models.py
frontend/: .gitignore  README.org  buildscript.js  global.d.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/content/: App.svelte  apiCalls.ts  index.js  index.ts  marker.ts  models.ts  store.js  utils.ts
frontend/src/content/lib/: AnnotationItem.svelte  AnnotationsList.svelte  Main.svelte  Marker.svelte  NextEditor.svelte  NodeChoice.svelte  Sidebar.svelte  Tooltip.svelte
frontend/src/content/lib/svg/: bxs-edit.svelte
org-test/: .dir-locals.el  javascript.org  org-roam.db  python.org
org-test/roamex/: a4300241-4fc9-481b-a2cc-0efb7ed479e1.org
