[tool.poetry]
name = "roamex"
version = "0.1.0"
description = ""
authors = ["Mostly Void <7rat13@gmail.com>"]
license = "AGPL"
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.4"
pydantic = "^1.8.2"
fastapi = {extras = ["all"], version = "^0.68.1"}
orgparse = "^0.2.4"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
roamex = "src.cli:app"
